# spacedinvaders

./: .gitattributes  .gitignore  00.basicconcepts.md  01.functionprimer.md  01.morewithfunctions.md  01.pointers.md  01.programflowcontrol.md  01.structures.md  02.arrays.md  02.firststeps.md  03.animated.md  03.graphics.md  03.moreanimation.md  03.simpleanimation.md  04.gameplay01.md  CMakeLists.txt  LICENSE  Makefile  README.md  basicconcepts.md  firststeps.md  morebasicconcepts.md  morewithfunctions.md  oldschoolgraphics.txt  open-solution.ps1  spacedinvaders.sln  vcpkg.json
AnimatedPixels/: AnimatedPixels.vcxproj  CMakeLists.txt  main.cpp  stdafx.cpp
Raw/: AnimatedSpacedStyleSheet.xcf  imagesheet.xcf
WindowLayout/: CMakeLists.txt  WindowLayout.vcxproj  main.cpp
animation01/: CMakeLists.txt  animation01.vcxproj  animation01.vcxproj.filters  main.cpp
bitmaps/: CMakeLists.txt  bitmaps.vcxproj  bitmaps.vcxproj.filters  main.cpp
docs/: BUILDING.md
gameplay01/: CMakeLists.txt  gameplay01.vcxproj  gameplay01.vcxproj.filters  main.cpp  stdafx.cpp
gameplay02/: CMakeLists.txt  Gameobject.cpp  Gameobject.h  Utils.h  gameplay02.vcxproj  gameplay02.vcxproj.filters  main.cpp
initialtemplate/: CMakeLists.txt  initialtemplate.vcxproj  main.cpp
msvc/: spacedinvaders.sln
resources/: imagesheet.xcf
simplesprite01/: CMakeLists.txt  main.cpp  simplesprite01.vcxproj  simplesprite01.vcxproj.filters
spacedinvaders/: spacedinvaders.vcxproj  spacedinvaders.vcxproj.filters
